Add script for training model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,5 @@ services:
     volumes:
       - "${HOME}/CMPNet/src:/root/code/cmpnet/src"
       - "/tmp/data:/root/code/data"
+      - "${HOME}/CMPNet/cmpnet_train_dubins.sh:/root/code/cmpnet/cmpnet_train_dubins.sh"
     command: bash
