--- a/environment.yml
+++ b/environment.yml
@@ -65,5 +65,7 @@ dependencies:
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=ha838bed_2
   - faiss-gpu=1.4.0=py36_cuda8.0.61_1
-  - pytorch=0.4.1=py36_py35_py27__9.0.176_7.1.2_2
-  - torchvision=0.2.1=py36_1
+  - pip:
+      - torchvision==0.3.0
+      - torch==1.1.0
+      - cython==0.29.12
