--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - "${HOME}/CMPNet/src:/root/code/cmpnet/src"
       - "/tmp/data:/root/code/data"
+      - "${HOME}/RLplayground/BC:/root/code/BC"
       - "${HOME}/CMPNet/src/exp/mpnet_train_dubins.sh:/root/code/cmpnet/mpnet_train_dubins.sh"
       - "${HOME}/CMPNet/src/exp/mpnet_test_dubins.sh:/root/code/cmpnet/mpnet_test_dubins.sh"
     command: bash
