--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2018.10.15
 cffi==1.11.5
 cycler==0.10.0
-faiss==1.4.0
+faiss>=1.4.0
 kiwisolver==1.0.1
 llvmlite==0.25.0
 matplotlib==3.0.1
@@ -17,6 +17,6 @@ pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
 six==1.11.0
-torch==0.4.1.post2
+torch==0.4.1
 torchvision==0.2.1
 tornado==5.1.1
