--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       dockerfile: Dockerfile
     runtime: nvidia
     image: cmpnet
+    shm_size: '8gb'
     environment:
       - "DISPLAY"
       - "QT_X11_NO_MITSHM=1"
