--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,13 @@ channels:
   - pytorch
   - defaults
 dependencies:
+  - pip:
+      - jupyter
+      - torchvision==0.4.2
+      - torch==1.3.1
+      - cython==0.29.12
+      - pandas==0.25.1
+      - tqdm==4.36.1
   - blas=1.0=mkl
   - ca-certificates=2018.03.07=0
   - certifi=2018.10.15=py36_0
@@ -65,8 +72,3 @@ dependencies:
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=ha838bed_2
   - faiss-gpu=1.4.0=py36_cuda8.0.61_1
-  - pip:
-      - jupyter
-      - torchvision==0.3.0
-      - torch==1.1.0
-      - cython==0.29.12
